hphp/hack/test/typecheck/constraint_array_index/after/dynamic_as_mixed.php.exp
WARN: File "dynamic_as_mixed.php", line 16, characters 8-9:
Indexing into a value of type `(dynamic & dict<arraykey, mixed>)` (Warn[12040])
  File "dynamic_as_mixed.php", line 14, characters 12-18:
  This expression has type `dynamic`
ERROR: File "dynamic_as_mixed.php", line 18, characters 7-18:
A `where` type constraint is violated here (Typing[4323])
  File "dynamic_as_mixed.php", line 9, characters 25-36:
  This is the method with `where` type constraints
  File "dynamic_as_mixed.php", line 9, characters 59-74:
  Expected `Container<mixed>`
  File "dynamic_as_mixed.php", line 16, characters 8-12:
  But got `dynamic`
  File "dynamic_as_mixed.php", line 15, characters 8-9:
    from this definition from this "as" assertion
